--- a/pSampler/templates/pSampler/index.html
+++ b/pSampler/templates/pSampler/index.html
@@ -13,7 +13,7 @@
 			</div>
 			<div id="progress_bar"><div class="percent">0%</div></div>
 			<output id="list"></output>
-			<form action"" target="_self" id="form-point">
+			<form action="" target="_self" id="form-point">
 				<div class="form-group">
 					{% csrf_token %}
 					{{ form }}
