--- a/pMaker/templates/pMaker/index.html
+++ b/pMaker/templates/pMaker/index.html
@@ -19,7 +19,7 @@
 					<div class="row">
 						<div class="col">
 							<div class="input-group">
-								<input type="color" class="form-control form-control-sm" value="#FF0000">
+								<input type="color" class="form-control form-control-sm color" value="#FF0000">
 							</div>
 						</div>
 						<div class="col-3">-></div>
