--- a/pMaker/templates/pMaker/index.html
+++ b/pMaker/templates/pMaker/index.html
@@ -25,7 +25,7 @@
 						<div class="col-3">-></div>
 						<div class="col">
 							<div class="input-group">
-								<input class="form-control form-control-sm" placeholder="1">
+								<input class="form-control form-control-sm type" placeholder="1">
 								<span class="input-group-btn">
 									<button class="btn btn-default btn-sm btn-remove" type="button">-</button>
 								</span>
@@ -35,13 +35,13 @@
 					<div class="row">
 						<div class="col">
 							<div class="input-group">
-								<input type="color" class="form-control form-control-sm" value="#00FF00">
+								<input type="color" class="form-control form-control-sm color" value="#00FF00">
 							</div>
 						</div>
 						<div class="col-3">-></div>
 						<div class="col">
 							<div class="input-group">
-								<input class="form-control form-control-sm" placeholder="2">
+								<input class="form-control form-control-sm type" placeholder="2">
 								<span class="input-group-btn">
 									<button class="btn btn-default btn-sm btn-remove" type="button">-</button>
 								</span>
@@ -51,13 +51,13 @@
 					<div class="row">
 						<div class="col">
 							<div class="input-group">
-								<input type="color" class="form-control form-control-sm" value="#0000FF">
+								<input type="color" class="form-control form-control-sm color" value="#0000FF">
 							</div>
 						</div>
 						<div class="col-3">-></div>
 						<div class="col">
 							<div class="input-group">
-								<input class="form-control form-control-sm" placeholder="3">
+								<input class="form-control form-control-sm type" placeholder="3">
 								<span class="input-group-btn">
 									<button class="btn btn-default btn-sm btn-add" type="button">+</button>
 								</span>
