--- a/pMaker/templates/pMaker/index.html
+++ b/pMaker/templates/pMaker/index.html
@@ -25,7 +25,7 @@
 						<div class="col-3">-></div>
 						<div class="col">
 							<div class="input-group">
-								<input class="form-control form-control-sm type" placeholder="1">
+								<input class="form-control form-control-sm type" value="1">
 								<span class="input-group-btn">
 									<button class="btn btn-default btn-sm btn-remove" type="button">-</button>
 								</span>
@@ -41,7 +41,7 @@
 						<div class="col-3">-></div>
 						<div class="col">
 							<div class="input-group">
-								<input class="form-control form-control-sm type" placeholder="2">
+								<input class="form-control form-control-sm type" value="2">
 								<span class="input-group-btn">
 									<button class="btn btn-default btn-sm btn-remove" type="button">-</button>
 								</span>
@@ -57,7 +57,7 @@
 						<div class="col-3">-></div>
 						<div class="col">
 							<div class="input-group">
-								<input class="form-control form-control-sm type" placeholder="3">
+								<input class="form-control form-control-sm type" value="3">
 								<span class="input-group-btn">
 									<button class="btn btn-default btn-sm btn-add" type="button">+</button>
 								</span>
@@ -159,7 +159,7 @@
 				alert('Reading file failed!');
 			}
 		};
-		reader.readAsText(f);
+		reader.readAsArrayBuffer(f);
 	}
 	function handleDragOver(evt) {
 		evt.stopPropagation();
