added point distance input box

--- a/pMaker/templates/pMaker/index.html
+++ b/pMaker/templates/pMaker/index.html
@@ -14,6 +14,11 @@
 			<div id="progress_bar"><div class="percent">0%</div></div>
 			<output id="list"></output>
 			<form action="" target="_self" id="form">
+				<div class="input-group">
+					<span class="input-group-addon">Point distance</span>
+					<input type="text" class="form-control form-control-sm" id="point_distance" value="0.02">
+				</div>
+				<br>
 				<p>One color maps to one Type:</p>
 				<div class="form-group">
 					<div class="row">
