writing make function in pmaker setup.js; using eval() for velocity; output file size exceeds data-url limitstion; considering using blob but dont know how

--- a/pMaker/templates/pMaker/index.html
+++ b/pMaker/templates/pMaker/index.html
@@ -84,11 +84,11 @@
 						<div class="col">
 							<div class="input-group">
 								<span class="input-group-addon">vx=</span>
-								<input class="form-control form-control-sm vel" value="0">
+								<input class="form-control form-control-sm string-vx" value="0">
 							</div>
 							<div class="input-group">
 								<span class="input-group-addon">vy=</span>
-								<input class="form-control form-control-sm vel" value="0">
+								<input class="form-control form-control-sm string-vy" value="0">
 								<span class="input-group-btn">
 									<button class="btn btn-default btn-sm btn-add" type="button">+</button>
 								</span>
