fixed bugs; added sample file and passed test; wrote a download function to handle front-end download

--- a/pMaker/templates/pMaker/index.html
+++ b/pMaker/templates/pMaker/index.html
@@ -112,7 +112,9 @@
 			<p>If a pixel is on the i-th row from bottom and j-th column from left:</p>
 			<p>X = j* point_distance, Y = i* point_dixtance.</p>
 			<br>
-			<p>A <a href="" download>sample</a> bmp file.</p>
+			<p>Velocity distribution can be <strong>functions</strong> of x and y, e.g. vx=x*x + y, vy = 0.
+			<br>(should be in JavaScript syntax)</p>
+			<p>A <a href="https://github.com/dlut414/pLab/files/1520822/cavity.zip" download>sample</a> bmp file.</p>
 			<hr>
 		</div>
 		<!-- Contact -->
