--- a/pSampler/templates/pSampler/index.html
+++ b/pSampler/templates/pSampler/index.html
@@ -197,7 +197,7 @@
 	dropZone.addEventListener('drop', handleFileSelect, false);
 	
 	///resize canvas
-	$('#canvas').width(window.innerWidth* 0.6);
-	$('#canvas').height(window.innerHeight* 0.7);
+	//$('#canvas').width(window.innerWidth* 0.6);
+	//$('#canvas').height(window.innerHeight* 0.7);
 </script>
 {%endblock%}
