rearranged js files; deleted glsl files

--- a/pMaker/templates/pMaker/index.html
+++ b/pMaker/templates/pMaker/index.html
@@ -130,7 +130,7 @@
 	</div>
 </div>
 {% load static %}
-<script src="{% static 'js/pmaker/setup.js' %}"></script>
+<script src="{% static 'js/pmaker.js' %}"></script>
 <script>
 	'use strict';
 
