--- a/pSampler/templates/pSampler/index.html
+++ b/pSampler/templates/pSampler/index.html
@@ -110,8 +110,8 @@
 <!-- <script id="point-fragment-shader" type="x-shader/x-fragment" src="{% static 'js/psampler/point-fragment-shader.glsl' %}"></script> -->
 <!-- <script id="sl-vertex-shader" type="x-shader/x-vertex" src="{% static 'js/psampler/sl-vertex-shader.glsl' %}"></script> -->
 <!-- <script id="sl-fragment-shader" type="x-shader/x-fragment" src="{% static 'js/psampler/sl-fragment-shader.glsl' %}"></script> -->
-<script src="{% static 'js/common/interpolator.js' %}"></script>
-<script src="{% static 'js/psampler/renderer.js' %}"></script>
+<script src="{% static 'js/interpolator.js' %}"></script>
+<script src="{% static 'js/psampler.js' %}"></script>
 <script>
 	'use strict';
 
