--- a/pFlow/templates/pFlow/index.html
+++ b/pFlow/templates/pFlow/index.html
@@ -3,32 +3,37 @@
 {%block content%}
 
 Under construction!
-<!-- Sidebar/menu -->
+<div class="container">
+	<!-- Sidebar/menu -->
 
-<!-- !PAGE CONTENT! -->
-<div class="w3-main w3-white" style="margin-left:260px">
-
-  <!-- Push down content on small screens -->
-  <div class="w3-hide-large" style="margin-top:80px"></div>
-
-  <div class="w3-container">
-    <div>
-	
-    </div>
-    <hr>
-    
-    
-    <h4><strong>Extra Info</strong></h4>
-
-  <!-- Contact -->
-  <div class="w3-container" id="contact">
-    <h4><strong>Contact</strong></h4>
-    <i class="fa fa-map-marker" style="width:30px"></i>Hu Fangyuan<br>
-	<i class="fa fa-map-marker" style="width:30px"></i>Koshizuka-Shibata-lab, the University of Tokyo<br>
-    <i class="fa fa-envelope" style="width:30px"> </i> Email: hfy8373_at_mps.q.t.u-tokyo.ac.jp<br>
-  <footer class="w3-container w3-padding-16" style="margin-top:32px">Powered by <a href="https://github.com/dlut414" target="_blank" class="w3-hover-text-green">dlut414</a></footer>
-  <footer class="w3-container w3-padding-16">css template from <a href="https://www.w3schools.com" target="_blank" class="w3-hover-text-green">w3schools</a> & <a href="http://getbootstrap.com/" target="_blank" class="w3-hover-text-green">bootstrap</a></footer>
-  </div>
-<!-- End page content -->
+	<!-- !PAGE CONTENT! -->
+	<div class="container" style="margin-left:260px;"> 
+		<div class="container">
+			<div>
+				<canvas id="canvas" width="800" height="500" class="w3-border">Your browser doesn't support WebGL!</canvas>
+			</div>
+			<output id="attribPanel" style="z-index:2;display:none;"></output>
+			<hr>
+			<h4><strong>Extra Info</strong></h4>
+			<p>
+			</p>
+			<hr>
+		</div>
+		<hr>
+		<!-- Contact -->
+		<div class="container" id="contact">
+			<h4><strong>Contact</strong></h4>
+			Hu Fangyuan<br>
+			Koshizuka-Shibata-lab, the University of Tokyo<br>
+			Email: hfy8373_at_mps.q.t.u-tokyo.ac.jp<br>
+			Github: <a href="https://github.com/dlut414" target="_blank" class="w3-hover-text-green">dlut414</a><br>
+			<footer class="w3-container w3-padding-16">
+			  <p>css template by: <a href="https://www.w3schools.com" target="_blank" class="w3-hover-text-green">w3schools</a> & <a href="http://getbootstrap.com/" target="_blank" class="w3-hover-text-green">bootstrap</a></p>
+			</footer>
+		</div>
+	</div>
+	<!-- End page content -->
 </div>
+
+<script src="{% static 'js/pflow.js' %}"></script>
 {%endblock%}
