--- a/pFlow/templates/pFlow/index.html
+++ b/pFlow/templates/pFlow/index.html
@@ -34,6 +34,6 @@ Under construction!
 	</div>
 	<!-- End page content -->
 </div>
-
+{% load static %}
 <script src="{% static 'js/pflow.js' %}"></script>
 {%endblock%}
